[package]
name = "hackrfone"
version = "0.2.3"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2024"
repository = "https://github.com/newAM/hackrfone"
license = "MIT"
description = "Rust library for the HackRF One software defined radio."
readme = "README.md"
keywords = ["hackrf", "sdr"]
categories = ["hardware-support"]
homepage = "https://github.com/newAM/hackrfone"

[dependencies]
rusb = "~0.9"

[dependencies.num-complex]
version = "~0.4"
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
